# Real-Time-Multilingual-Voice-AI-Agent-Clinical-Appointment-Booking

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
backend/: config.py  main.py
backend/agent/: __init__.py  prompt.py  reasoning.py  tools.py
backend/api/: middleware.py
backend/api/routes/: __init__.py  doctors.py  health.py  voice.py
backend/db/: database.py  models.py
backend/memory/: __init__.py  persistent_memory.py  session_memory.py
backend/scheduler/: __init__.py  appointment_engine.py  campaign_scheduler.py
backend/services/: __init__.py  language_detection.py  pipeline.py  speech_to_text.py  text_to_speech.py
docs/: ARCHITECTURE.md  REQUIREMENTS_CHECKLIST.md
frontend/: index.html
scripts/: seed_doctors.py
