[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-multilingual-voice-ai-agent"
version = "0.1.0"
description = "Real-time multilingual voice AI agent for clinical appointment booking (FastAPI, WebSockets, Whisper, LLM, Redis, Postgres)."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi[all]>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "SQLAlchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "langdetect>=1.0.9",
  "apscheduler>=3.10.0",
  "structlog>=24.0.0",
  "orjson>=3.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff",
  "mypy",
]

